--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 dagger = "2.52"
+hilt = "2.51.1"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,7 +32,12 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 com-google-dagger = {group="com.google.dagger", name="dagger-android", version.ref = "dagger"}
 com-google-dagger-compiler = {group = "com.google.dagger", name="dagger-compiler", version.ref = "dagger"}
 
+# Hilt
+com-google-hilt = {group = "com.google.dagger", name="hilt-android", version.ref = "hilt"}
+com-google-hilt-compiler = {group = "com.google.dagger", name="hilt-android-compiler", version.ref = "hilt"}
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+dagger-hilt = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
