--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,9 @@ activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 dagger = "2.52"
 hilt = "2.51.1"
+retrofit = "2.4.0"
+hiltCompose = "1.2.0"
+hiltLifecycle = "1.0.0-alpha03"
 
 
 [libraries]
@@ -34,7 +37,13 @@ com-google-dagger-compiler = {group = "com.google.dagger", name="dagger-compiler
 
 # Hilt
 com-google-hilt = {group = "com.google.dagger", name="hilt-android", version.ref = "hilt"}
+androidx-hilt-navigation-compose = {group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltCompose"}
 com-google-hilt-compiler = {group = "com.google.dagger", name="hilt-android-compiler", version.ref = "hilt"}
+androidx-hilt-lifecycle-viewmodel = {group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hiltLifecycle"}
+
+# Retrofit2
+com-squareup-retrofit2 = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
+com-squareup-retrofit2-converter-gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
