--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ hilt = "2.51.1"
 retrofit = "2.9.0"
 hiltCompose = "1.2.0"
 hiltLifecycle = "1.0.0-alpha03"
-
+ktor = "3.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,21 +32,26 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 # Dagger
-com-google-dagger = {group="com.google.dagger", name="dagger-android", version.ref = "dagger"}
-com-google-dagger-compiler = {group = "com.google.dagger", name="dagger-compiler", version.ref = "dagger"}
+com-google-dagger = { group = "com.google.dagger", name = "dagger-android", version.ref = "dagger" }
+com-google-dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger" }
 
 # Hilt
-com-google-hilt = {group = "com.google.dagger", name="hilt-android", version.ref = "hilt"}
-androidx-hilt-navigation-compose = {group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltCompose"}
-com-google-hilt-compiler = {group = "com.google.dagger", name="hilt-android-compiler", version.ref = "hilt"}
-androidx-hilt-lifecycle-viewmodel = {group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hiltLifecycle"}
- # Retrofit2
-com-squareup-retrofit2 = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
-com-squareup-retrofit2-converter-gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
-com-squareup-retrofit2-adapter-rxjava2 = {group = "com.squareup.retrofit2", name = "adapter-rxjava2", version.ref = "retrofit"}
+com-google-hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltCompose" }
+com-google-hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+androidx-hilt-lifecycle-viewmodel = { group = "androidx.hilt", name = "hilt-lifecycle-viewmodel", version.ref = "hiltLifecycle" }
+
+# Retrofit2
+com-squareup-retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+com-squareup-retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+com-squareup-retrofit2-adapter-rxjava2 = { group = "com.squareup.retrofit2", name = "adapter-rxjava2", version.ref = "retrofit" }
+
+# Ktor
+io-ktor-ktor-client-cio = {group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor"}
+io-ktor-ktor-client-core = {group = "io.ktor", name = "ktor-client-core", version.ref = "ktor"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-dagger-hilt = {id = "com.google.dagger.hilt.android", version.ref = "hilt"}
+dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
