--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ retrofit = "2.9.0"
 hiltCompose = "1.2.0"
 hiltLifecycle = "1.0.0-alpha03"
 ktor = "3.0.1"
+coil = "2.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +31,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+
+io-coil-svg = { group = "io.coil-kt", name = "coil-svg", version.ref = "coil"}
+io-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil"}
 
 # Dagger
 com-google-dagger = { group = "com.google.dagger", name = "dagger-android", version.ref = "dagger" }
